--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,7 @@
   "version": 2,
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/index.js" },
+    { "src": "/(.*)\\.js", "headers": { "content-type": "application/javascript" } },
     { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
