--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "dependencies": {
     "axios": "^0.21.1",
-    "cheerio": "^1.0.0",
-    "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "cheerio": "^1.0.0"
   },
   "name": "dealanalysis",
   "version": "1.0.0",
-  "main": "script.js",
+  "main": "api/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
